# nps-teach

./: .gitignore  CMakeLists.txt  main.c
docs/: docs.drawio
src/: device.c  nps.c  nps_main.c  nps_view.c  sock2.c
src/inc/: hdr.h  nps.h  prtc.h  sock2.h  stack.h
src/inc/ncursesw/: curses.h  term.h
src/prtc/: arp.c  ethii.c  icmp.c  ip.c  tcp.c  udp.c
src/utils/: stack.c  tcputil.c
